corrigindo erros gutemberg

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /Trabalho-TLP/nbproject/private/
 /aplicacao/nbproject/private/
 /aplicacao/build/
+/trabalho-tlp/nbproject/private/
+/trabalho-tlp/build/
