--- a/trabalho-tlp/nbproject/project.properties
+++ b/trabalho-tlp/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=trabalho-tlp
-main.class=trabalho.tlp.Main
+main.class=trabalho.tlp.DaviGutyChaps
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
